<resources>
    <string name="app_name">MarvApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="desc_person">Bitten by a radioactive spider, high school student Peter Parker gained the speed, strength and powers of a spider. Adopting the name Spider-Man, Peter hoped to start a career using his new abilities. Taught that with great power comes great responsibility, Spidey has vowed to use his powers to help people.</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <!-- Login -->
    <string name="hello_world">Hello Square World!</string>
    <string name="tv_email">E-mail</string>
    <string name="tv_password">Password</string>
    <string name="btn_login">LOGIN</string>

    <string name="tv_esqueceuSenha">Forgot password?</string>
    <string name="tv_nTemConta">Don\'t have an account?</string>
    <string name="tv_cadastre_se">Register.</string>

    <string name="tv_user">Username</string>
    <string name="tv_rpassword">Repeat Password</string>
    <string name="btn_cadastrar">SIGN UP</string>
    <string name="tv_redefinirSenha">Redefine password</string>
    <string name="tv_textoRedefinirSenha">Enter the email associated with your account and we will send you an email with instructions to reset your password.</string>
    <string name="btn_enviar">SEND</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="tv_textoVerificarEmail">We have sent instructions on how to reset your password, please check the email previously entered.</string>
    <string name="tv_verificarEmail">Check email</string>
    <string name="tv_criarSenha">Create new password</string>
    <string name="tv_textoCriarSenha">Your new password must be different from the password used previously.</string>
    <string name="btn_redefinirSenha">REDEFINE PASSWORD</string>
    <string name="settings">Settings</string>
    <string name="HeroiDoDia">Hero of the day</string>
    <string name="MaisPopulares">Most popular</string>
    <string name="Sugestoes">Suggested for you</string>
    <string name="Historico">Browsing history</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="quiz">Quiz</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="pontuacao_quiz">400</string>
    <string name="conquista_quiz">2/5</string>


    <!-- Menu Inferior -->
    <string name="menu_home">Home</string>
    <string name="menu_busca">Search</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_favorito">Favorite</string>
    <string name="menu_perfil">Profile</string>
    <string name="icone_configuracao">Configuração</string>

    <!-- Fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_barraBusca">Search Result</string>
    <string name="tv_titleBBusca">Search</string>

    <!--  Menu Configurações  -->
    <string name="itConfiguracao">Settings</string>
    <string name="itTema">Change theme</string>
    <string name="itSair">Logout</string>

    <!--    Twitter-->
    <string name="twitter_consumer_key">SpDaaJq0r43HOdyGyYHovBKmC</string>
    <string name="twitter_consumer_secret">WB6TkvCVCnVh6u96v4DFMy5mMu88dgH23ok8DIpWxkrIqhNgbS</string>

    <!--    Facebook-->
    <string name="facebook_app_id">262666635214713</string>
    <string name="fb_login_protocol_scheme">6e3848dcd8d8460ab78aab6f0e2298a2</string>

    <!--    Redefinir Senha-->
    <string name="tv_textObs">If you proceed with this action and have registered through any social network, <b>know that your account will be disconnected from the social network </b>and the login will have to be done with the email and the new password defined.</string>

    <string name="tvLinkMarvel"><u>See more details on www.marvel.com</u></string>
    <string name="siteMarvel">https://www.marvel.com/</string>


</resources>