<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_lig"
    tools:context=".ui.iniciais.CadastroActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back_black"
        android:background="#00000000"
        app:titleTextColor="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="183dp"
        android:layout_height="77dp"
        android:background="@drawable/marv"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <include
        android:id="@+id/llbodyCadastro"
        layout="@layout/body_login"
        android:layout_width="324dp"
        android:layout_height="401dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="190dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <LinearLayout
        android:layout_width="324dp"
        android:layout_height="401dp"
        android:layout_marginTop="190dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/tvCriarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_criarSenha"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTextoCriarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_textoCriarSenha"
            android:textColor="@color/black"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tv_password"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPasswordRS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/destaqueVermelho"
            android:drawableRight="@drawable/ic_visibility_off"
            android:drawableTint="@color/black"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvRPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tv_rpassword"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etRPasswordRS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/destaqueVermelho"
            android:drawableRight="@drawable/ic_visibility_off"
            android:drawableTint="@color/black"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnRedefinirSenha"
            android:layout_width="218dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_login_radius"
            android:backgroundTint="@color/destaqueVermelho"
            android:text="@string/btn_redefinirSenha"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>