<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_lig"
    tools:context=".ui.iniciais.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back_black"
        android:background="#00000000"
        app:titleTextColor="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="183dp"
        android:layout_height="77dp"
        android:background="@drawable/marv"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/llbodyCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <include
        android:id="@+id/llbodyCadastro"
        layout="@layout/body_login"
        android:layout_width="324dp"
        android:layout_height="452dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>

    <LinearLayout
        android:layout_width="324dp"
        android:layout_height="452dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="27dp"
            android:layout_marginLeft="24dp"
            android:text="@string/tv_user"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="27dp"
            android:layout_marginLeft="24dp"
            android:backgroundTint="?attr/colorAccent"
            android:textColor="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="27dp"
            android:layout_marginLeft="24dp"
            android:text="@string/tv_email"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="27dp"
            android:layout_marginLeft="24dp"
            android:backgroundTint="?attr/colorAccent"
            android:inputType="textEmailAddress"
            android:textColor="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="27dp"
            android:layout_marginLeft="24dp"
            android:text="@string/tv_password"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="?attr/colorAccent"
            android:layout_marginRight="27dp"
            android:layout_marginLeft="24dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?attr/colorOnPrimary">

            <EditText
                android:id="@+id/etPasswordC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnPrimary"
                android:backgroundTint="?attr/colorAccent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvRPasswordC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="27dp"
            android:layout_marginLeft="24dp"
            android:text="@string/tv_rpassword"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="27dp"
            android:layout_marginLeft="24dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?attr/colorOnPrimary"
            app:boxStrokeColor="?attr/colorAccent">

            <EditText
                android:id="@+id/etRPasswordC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnPrimary"
                android:backgroundTint="?attr/colorAccent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="218dp"
            android:layout_height="50dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/btn_login_radius"
            android:backgroundTint="?attr/colorAccent"
            android:text="@string/btn_cadastrar"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>